2006-11-13  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/selfcheck.c: Work for estimate calcsize and
				  program "DUMP".

2006-11-13  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Don't ouput an warning if holdingdisk 'use'
				is set to 0.

2006-11-09  Jean-Louis Martineau <martineau@zmanda.com>
	* Amanda 2.5.1p2 released.
	* configure.in: AM_INIT_AUTOMAKE(amanda, 2.5.1p2).
	* NEWS: Update for 2.5.1p2

2006-11-09  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/conffile.c (getconf_byname):
	                        Parse "DEFINE:identifer:parameter" format.
	* server-src/conffile.c (getconf_list): New function to list a DEFINE.
	* server-src/conffile.c (lookup_holdingdisk): New function.
	* server-src/conffile.h (getconf_list,
	                         lookup_holdingdisk): New prototype.
	* server-src/getconf.c: accept --list argument and
	                        "DEFINE:identifer:parameter" format.
	* man/xml-source/amgetconf.8.xml: Document.

2006-11-09  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/chg-scsi.c: Don't remove '_' from "generic_changer".
	
2006-11-08  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amanda.h, common-src/security-util.c,
	  common-src/util.h, configure.in,
	  oldrecover-src/amrecover.c, oldrecover-src/extract_list.c,
	  recover-src/amrecover.c, recover-src/extract_list.c,
	  restore-src/amrestore.c, server-src/conffile.c,
	  server-src/dumper.c: Fix compiler error on Tru64.

2006-11-08  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: set off_t variable to 0 before sscanf.
	* server-src/planner.c: set off_t variable to 0 before sscanf.

2006-11-07  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl.in: Improve error message.

2006-11-07  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c: Fix coverity bug 170.
	* server-src/diskfile.c: Fix coverity bug 147.
