@@ -24,7 +24,7 @@
  * file named AUTHORS, in the root directory of this distribution.
  */
 /*
- * $Id: planner.c,v 1.206.2.4 2006/11/08 12:09:30 martinea Exp $
+ * $Id: planner.c,v 1.206.2.5 2006/11/20 22:27:45 martinea Exp $
  *
  * backup schedule planner for the Amanda backup system.
  */
@@ -1653,6 +1653,7 @@ static void handle_result(
     int tch;
     char *qname;
     char *disk;
+    OFF_T_FMT_TYPE size_;
 
     hostp = (am_host_t *)datap;
     hostp->up = HOST_READY;
@@ -1758,11 +1759,11 @@ static void handle_result(
 	s = t;
 	ch = tch;
 
-	size = (off_t)0;
-	if (sscanf(t - 1, "%d SIZE " OFF_T_FMT , &level,
-		   (OFF_T_FMT_TYPE *)&size) != 2) {
+	size_ = (OFF_T_FMT_TYPE)0;
+	if (sscanf(t - 1, "%d SIZE " OFF_T_FMT , &level, &size_) != 2) {
 	    goto bad_msg;
 	}
+	size = size_;
 	dp = lookup_hostdisk(hostp, disk);
 	amfree(disk);
 
