@@ -1,3 +1,7 @@
+2006-11-20  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/driver.c: Use temporary variable to scanf an OFF_T_FMT.
+	* server-src/planner.c: Use temporary variable to scanf an OFF_T_FMT.
+
 2006-11-13  Jean-Louis Martineau <martineau@zmanda.com>
 	* client-src/selfcheck.c: Work for estimate calcsize and
 				  program "DUMP".
